--- a/SGP_Project/contact.html
+++ b/SGP_Project/contact.html
@@ -33,13 +33,13 @@
 
         <form class="contact-form">
             <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter your name">
+            <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
             <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email">
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
             <label for="message">Your Message:</label>
-            <textarea id="message" name="message" rows="5" placeholder="Enter your message"></textarea>
+            <textarea id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
 
             <button type="submit">Send Message</button>
         </form>
